Add full working example #1.